app/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-app-service
  namespace: demo-app

spec:

  selector:
    app: web-app

  ports:

    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
